[package]
name = "cirno-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
rustix = { version = "0.38.26", features = ["process"] }
sysinfo = "0.29.11"

[profile.release]
lto = true
codegen-units = 1
